# claude-warden

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  claude-warden-threat-model.md  install-remote.sh  install.sh  settings.hooks.json  settings.hooks.v2.json  statusline.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
capture/: claude  logger.py
config/profiles/: standard.json  strict.json
demo/: claude-run.sh  demo-helper.sh  demo.tape  tmux-hero.sh
demo/mock-inputs/: post-tool-use-clean-bash.json  post-tool-use-clean-read.json  post-tool-use-reminder-bash.json  post-tool-use-reminder-read.json  post-tool-use-reminder-write.json  post-tool-use-task-agent.json  pre-tool-use-cargo.json  pre-tool-use-curl.json  (+8 more)
docs/: llmx-lean-output-prompt.md
hooks/: _token-count-bg  config-change  elicitation  elicitation-result  instructions-loaded  mcp-output-compress  permission-request  post-tool-use  pre-compact  pre-tool-use  read-compress  read-guard  session-end  session-lifecycle  session-start  stop  subagent-start  subagent-stop  tool-error
monitoring/: docker-compose.macos.yml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml
policies/: default.toml
shims/: liveness.sh  session-end.sh  session-start.sh  setup.sh
src/: config.rs  db.rs  main.rs  router.rs  server.rs  types.rs
tests/: README.md  deployment-test-results.txt  run.sh  test-hooks.sh  test-results.txt
(+43 files in other folders)
