[package]
name = "warden-daemon"
version = "1.0.0"
edition = "2021"
description = "HTTP hook daemon for claude-warden"
license = "MIT"

[[bin]]
name = "warden-daemon"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["rt", "net", "macros", "signal", "time", "fs"] }
tower = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Bash parsing
tree-sitter = "0.24"
tree-sitter-bash = "0.23"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
dirs = "5"

# Optional
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

[features]
default = []
otel = ["reqwest"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
